tests/semantic/pass/function_forward_declarations.c
int f(void); 
int f(void) {}
int *g(void); 
int *g(void) {}
int **h(void); 
int **h(void) {}
