tests/semantic/fail/conflicting_types.c
int main() {
  int f(int);
}

int f(void) {
}
